--- a/Front-end/JS-frameworks/Labs/Ads/Structure/app/index.html
+++ b/Front-end/JS-frameworks/Labs/Ads/Structure/app/index.html
@@ -29,6 +29,7 @@
 <script src="lib/jquery/jquery-2.1.3.js"></script>
 <script src="lib/jquery.noty/jquery.noty.js"></script>
 <script src="lib/bootstrap/bootstrap-3.1.1.js"></script>
+<script src="lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js"></script>
 <script src="js/app.js"></script>
 <!--Services-->
 <script src="js/services/adsServices.js"></script>
