--- a/Front-end/JS-frameworks/Homeworks/01.Intro/Solutions/student-page/index.html
+++ b/Front-end/JS-frameworks/Homeworks/01.Intro/Solutions/student-page/index.html
@@ -11,7 +11,7 @@
 <p>Grade: {{student.grade}}</p>
 <p>School: {{student.school}}</p>
 <p>Teacher: {{student.teacher}}</p>
-<script src="js/lib/angular.js"></script>
+<script src="../libs/js/angular.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/StudentController.js"></script>
 </body>
