--- a/Front-end/JS-apps/7.SPA-Applications-and-App-Architecture/books/index.html
+++ b/Front-end/JS-apps/7.SPA-Applications-and-App-Architecture/books/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="libraries/jquery-2.2.0.min.js"></script>
     <script src="libraries/bootstrap/js/bootstrap.min.js"></script>
-    <script src="libraries/sammy.js"></script>
+    <script src="libraries/sammy-latest.min.js"></script>
     <script src="libraries/q.js"></script>
     <script src="libraries/mustache.min.js"></script>
 
