--- a/Front-end/JS-frameworks/Homeworks/02.Controllers-and-Markup/VideoSystem/index.html
+++ b/Front-end/JS-frameworks/Homeworks/02.Controllers-and-Markup/VideoSystem/index.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button class="navbar-toggle collapsed" aria-controls="navbar" aria-expanded="false" data-target="#navbar"
+            <button class="navbar-toggle collapsed" aria-expanded="false" data-target="#navbar"
                     data-toggle="collapse" type="button">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
