--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Issue tracking system</title>
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
     <script src="lib/jquery/jquery-2.2.2.js"></script>
     <script src="lib/angular/angular.js"></script>
@@ -22,15 +23,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">Home</a></li>
-                <li><a href="#">Link</a></li>
+                <li class="active"><a href="#/">Dashboard</a></li>
+                <li><a href="#/profile">Profile</a></li>
             </ul>
         </div>
     </div>
 </nav>
-<main class="container" ng-view></main>
+<main class="container"  ng-view></main>
 <!-- Start Libs -->
-
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/angular/angular-animate.js"></script>
 <script src="lib/bootstrap/bootstrap.js"></script>
@@ -38,10 +38,15 @@
 <script src="lib/jquery.noty/jquery.noty.packaged.js"></script>
 <!-- End Libs -->
 <script src="js/repository/accordion.js"></script>
-<script src="js/repository/scripts.js"></script>
+<script src="js/repository/bootstrap-extension.js"></script>
 <script src="js/app.js"></script>
 <!-- Start Controllers -->
 <script src="js/controllers/HomeController.js"></script>
+<script src="js/controllers/UserController.js"></script>
+<script src="js/controllers/DashboardController.js"></script>
 <!-- End Controllers -->
+<!-- Start Services -->
+<script src="js/services/notifyService.js"></script>
+<!-- End Services -->
 </body>
 </html>
