--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Issue tracking system</title>
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="lib/angular-loading-bar/loading-bar.css">
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
-    <script src="lib/jquery/jquery-2.2.2.js"></script>
-    <script src="lib/angular/angular.js"></script>
+
 </head>
 <body ng-cloak>
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -29,10 +30,14 @@
         </div>
     </div>
 </nav>
-<main class="container"  ng-view></main>
+<main class="container" ng-view></main>
+
 <!-- Start Libs -->
+<script src="lib/jquery/jquery-2.2.2.js"></script>
+<script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/angular/angular-animate.js"></script>
+<script src="lib/angular-loading-bar/loading-bar.js"></script>
 <script src="lib/bootstrap/bootstrap.js"></script>
 <script src="lib/ui.bootstrap/ui-bootstrap-tpls-1.3.1.js"></script>
 <script src="lib/jquery.noty/jquery.noty.packaged.js"></script>
