--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -2,12 +2,11 @@
 <html lang="en" ng-app="issueTracker">
 <head>
     <meta charset="UTF-8">
-    <title>Issue tracking system</title>
+    <title>Issue Tracking System</title>
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="lib/angular-loading-bar/loading-bar.css">
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
-
 </head>
 <body ng-cloak>
 <nav class="navbar navbar-inverse">
@@ -24,8 +23,21 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">Dashboard</a></li>
-                <li><a href="#/profile">Profile</a></li>
+                <li class="active"><a href="#/"><span class="glyphicon glyphicon-tasks"></span> Dashboard</a></li>
+                <li class="dropdown">
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-user"></span> User<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#/profile"><span class="glyphicon glyphicon-th-list"></span> Profile</a></li>
+                        <li>
+                            <a href="#/profile/password"><span class="glyphicon glyphicon-lock"></span> Change Password</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
     </div>
