--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -61,6 +61,8 @@
 <script src="js/controllers/HomeController.js"></script>
 <script src="js/controllers/UserController.js"></script>
 <script src="js/controllers/DashboardController.js"></script>
+<script src="js/controllers/IssuesController.js"></script>
+<script src="js/controllers/ProjectsController.js"></script>
 <!-- End Controllers -->
 <!-- Start Services -->
 <script src="js/services/notifyService.js"></script>
