--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -9,41 +9,8 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body ng-cloak>
-<nav class="navbar navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#/">Issue Tracking System</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#/"><span class="glyphicon glyphicon-tasks"></span> Dashboard</a></li>
-                <li class="dropdown">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="glyphicon glyphicon-user"></span> User<span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#/profile"><span class="glyphicon glyphicon-th-list"></span> Profile</a></li>
-                        <li>
-                            <a href="#/profile/password"><span class="glyphicon glyphicon-lock"></span> Change Password</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<nav ng-include="'views/templates/navbar.html'"></nav>
 <main class="container" ng-view></main>
-
 <!-- Start Libs -->
 <script src="lib/jquery/jquery-2.2.2.js"></script>
 <script src="lib/angular/angular.js"></script>
