--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
 </head>
-<body ng-cloak>
+<body>
 <nav ng-include="'views/templates/navbar.html'"></nav>
 <main class="container" ng-view></main>
 <!-- Start Libs -->
@@ -33,6 +33,7 @@
 <!-- End Controllers -->
 <!-- Start Services -->
 <script src="js/services/notifyService.js"></script>
+<script src="js/services/authServices.js"></script>
 <!-- End Services -->
 </body>
 </html>
