use users/me api in authServices.js to get isAdmin

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -32,8 +32,13 @@
 <script src="js/controllers/IssuesController.js"></script>
 <script src="js/controllers/ProjectsController.js"></script>
 <!-- End Controllers -->
+<!-- Start Filters -->
+<script src="js/filters/commonFilters.js"></script>
+<!-- End Filters -->
 <!-- Start Services -->
 <script src="js/services/notifyService.js"></script>
+<script src="js/services/issuesServices.js"></script>
+<script src="js/services/projectsServices.js"></script>
 <script src="js/services/authServices.js"></script>
 <!-- End Services -->
 </body>
