--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="lib/angular-loading-bar/loading-bar.css">
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
-    <script src="lib/angular/angular.js"></script>
 </head>
 <body>
 <nav ng-include="'views/templates/navbar.html'"></nav>
 <main class="container" ng-view></main>
 <!-- Start Libs -->
-
+<script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/angular/angular-animate.js"></script>
 <script src="lib/angular-loading-bar/loading-bar.js"></script>
@@ -22,7 +21,6 @@
 <script src="lib/ui.bootstrap/ui-bootstrap-tpls-1.3.1.js"></script>
 <script src="lib/jquery.noty/jquery.noty.packaged.js"></script>
 <!-- End Libs -->
-<script src="js/repository/accordion.js"></script>
 <script src="js/app.js"></script>
 <!-- Start Controllers -->
 <script src="js/controllers/NavbarController.js"></script>
@@ -32,6 +30,9 @@
 <script src="js/controllers/IssuesController.js"></script>
 <script src="js/controllers/ProjectsController.js"></script>
 <!-- End Controllers -->
+<!-- Start Repositories-->
+<script src="js/repository/accordion.js"></script>
+<!-- End Repositories-->
 <!-- Start Filters -->
 <script src="js/filters/commonFilters.js"></script>
 <!-- End Filters -->
