--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="styles/app.css">
 </head>
-<body>
+<body ng-cloak>
 <nav ng-include="'views/templates/navbar.html'"></nav>
 <main class="container" ng-view></main>
 <!-- Start Libs -->
@@ -23,6 +23,7 @@
 <!-- End Libs -->
 <script src="js/app.js"></script>
 <!-- Start Controllers -->
+<script src="js/controllers/AdminController.js"></script>
 <script src="js/controllers/NavbarController.js"></script>
 <script src="js/controllers/HomeController.js"></script>
 <script src="js/controllers/UserController.js"></script>
