--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -42,6 +42,8 @@
 <script src="js/services/issuesServices.js"></script>
 <script src="js/services/projectsServices.js"></script>
 <script src="js/services/authServices.js"></script>
+<script src="js/services/datePickerService.js"></script>
 <!-- End Services -->
+<script src="js/directives/commonDirectives.js"></script>
 </body>
 </html>
