--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -43,6 +43,7 @@
 <script src="js/services/projectsServices.js"></script>
 <script src="js/services/authServices.js"></script>
 <script src="js/services/datePickerService.js"></script>
+<script src="js/services/filterServices.js"></script>
 <!-- End Services -->
 <script src="js/directives/commonDirectives.js"></script>
 </body>
