--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="lib/angular-loading-bar/loading-bar.css">
     <link rel="stylesheet" href="lib/animate.css">
+    <link rel="stylesheet" href="styles/ng-tags-input.css">
+    <link rel="stylesheet" href="styles/ng-tags-input.bootstrap.css">
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body ng-cloak>
@@ -15,8 +17,8 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 <script src="lib/angular/angular-animate.js"></script>
-<script src="lib/angular-loading-bar/loading-bar.js"></script>
 <script src="lib/jquery/jquery-2.2.2.js"></script>
+<script src="lib/angular-loading-bar/loading-bar.js"></script>
 <script src="lib/bootstrap/bootstrap.js"></script>
 <script src="lib/ui.bootstrap/ui-bootstrap-tpls-1.3.1.js"></script>
 <script src="lib/jquery.noty/jquery.noty.packaged.js"></script>
@@ -32,6 +34,7 @@
 <script src="js/controllers/ProjectsController.js"></script>
 <!-- End Controllers -->
 <!-- Start Repositories-->
+<script src="js/repository/ng-tags-input.js"></script>
 <script src="js/repository/accordion.js"></script>
 <!-- End Repositories-->
 <!-- Start Filters -->
@@ -46,5 +49,6 @@
 <script src="js/services/filterServices.js"></script>
 <!-- End Services -->
 <script src="js/directives/commonDirectives.js"></script>
+
 </body>
 </html>
