js/ name change

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/ng-tags-input.bootstrap.css">
     <link rel="stylesheet" href="styles/app.css">
 </head>
-<body ng-cloak>
+<body ng-cloak ng-controller="BaseController">
 <nav ng-include="'views/templates/navbar.html'"></nav>
 <main class="container" ng-view></main>
 <!-- Start Libs -->
@@ -25,30 +25,30 @@
 <!-- End Libs -->
 <script src="js/app.js"></script>
 <!-- Start Controllers -->
-<script src="js/controllers/AdminController.js"></script>
-<script src="js/controllers/NavbarController.js"></script>
-<script src="js/controllers/HomeController.js"></script>
-<script src="js/controllers/AccountController.js"></script>
-<script src="js/controllers/DashboardController.js"></script>
-<script src="js/controllers/IssuesController.js"></script>
-<script src="js/controllers/ProjectsController.js"></script>
+<script src="js/controllers/base-controller.js"></script>
+<script src="js/controllers/navbar-controller.js"></script>
+<script src="js/controllers/home-controller.js"></script>
+<script src="js/controllers/account-controller.js"></script>
+<script src="js/controllers/dashboard-controller.js"></script>
+<script src="js/controllers/issues-controller.js"></script>
+<script src="js/controllers/projects-controller.js"></script>
 <!-- End Controllers -->
 <!-- Start Repositories-->
 <script src="js/repository/ng-tags-input.js"></script>
 <script src="js/repository/accordion.js"></script>
 <!-- End Repositories-->
 <!-- Start Filters -->
-<script src="js/filters/commonFilters.js"></script>
+<script src="js/filters/common-filters.js"></script>
 <!-- End Filters -->
 <!-- Start Services -->
-<script src="js/services/notifyService.js"></script>
-<script src="js/services/issuesServices.js"></script>
-<script src="js/services/projectsServices.js"></script>
-<script src="js/services/authServices.js"></script>
-<script src="js/services/datePickerService.js"></script>
-<script src="js/services/filterServices.js"></script>
+<script src="js/services/notify-services.js"></script>
+<script src="js/services/issues-services.js"></script>
+<script src="js/services/projects-services.js"></script>
+<script src="js/services/auth-services.js"></script>
+<script src="js/services/date-picker-service.js"></script>
+<script src="js/services/filter-services.js"></script>
 <!-- End Services -->
-<script src="js/directives/commonDirectives.js"></script>
+<script src="js/directives/common-directives.js"></script>
 
 </body>
 </html>
