--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
@@ -40,7 +40,15 @@
         <button class="btn btn-success" data-toggle="modal" data-target="#addProject">Add New Project</button>
         <a href="#/projects" class="btn btn-default">List All Projects</a>
         <!-- Modal -->
-        <div ng-controller="ProjectsController" ng-include="'views/modals/add-project-modal.html'"></div>
+        <div class="modal fade" id="addProject" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div ng-controller="ProjectsController" ng-include="'projects/add-project.html'"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
