--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/account/change-password.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/account/change-password.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-offset-3 col-md-8">
+    <div class="col-md-offset-2 col-md-9">
         <form name="changePasswordForm">
             <div class="form-group">
                 <h2>Change Password</h2>
@@ -37,7 +37,7 @@
                 'Confirm Password' and 'Password' has to match
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" ng-click="changePassword(changePasswordData)"
+                <button class="btn btn-success" ng-click="changePassword(changePasswordData)"
                         ng-disabled="changePasswordForm.$invalid">Change Password
                 </button>
             </div>
