--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
@@ -57,7 +57,7 @@
         <label for="priority" class="control-label col-md-2">Priority</label>
         <div class="col-md-9">
             <select id="priority" ng-model="issueData.PriorityId" required="required" class="form-control">
-                <option value="" disabled>-- Select Priority --</option>
+                <option value="" disabled>-- Projects --</option>
                 <option ng-repeat="priority in selectedProject.Priorities" value="{{priority.Id}}">{{priority.Name}}
                 </option>
             </select>
