--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
@@ -2,18 +2,11 @@
     <div class="col-md-12">
         <h2>Dashboard</h2>
     </div>
-    <div class="col-md-3">
-        <h3>Project Leader</h3>
-        <div ng-repeat="project in projects">
-            <a ng-href="#/projects/{{project.Id}}">{{project.Name}}</a>
-        </div>
-    </div>
-    <div class="col-md-9">
+    <div class="col-md-12">
         <h3>Assigned Issues</h3>
         <table class="table">
             <thead>
             <tr>
-                <th>Project</th>
                 <th>Issue</th>
                 <th>Description</th>
                 <th>Due Date</th>
@@ -21,21 +14,33 @@
             </thead>
             <tbody ng-repeat="issue in myIssues.Issues">
             <tr>
-                <td><a ng-href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a></td>
-                <td><a ng-href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
+                <td><a ng-href="#/issues/{{issue.Id}}">{{issue.Title}}</a>
+                    (<a ng-href="#/projects/{{issue.Project.Id}}" style="color: gray">{{issue.Project.Name}}</a>)</td>
                 <td>{{issue.Description}}</td>
                 <td>{{issue.DueDate | date}}</td>
             </tr>
             </tbody>
         </table>
-        <div>
-            <uib-pagination boundary-links="true" total-items="totalItems" ng-model="issuesParams.pageNumber"
-                            class="pagination-sm" items-per-page="issuesParams.pageSize" ng-change="reloadIssues()"
-                            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
-            </uib-pagination>
-        </div>
+        <uib-pagination boundary-links="true" total-items="totalIssuesItems" ng-model="issuesParams.pageNumber"
+                        class="pagination-sm" items-per-page="issuesParams.itemsPerPage" ng-change="reloadIssues()"
+                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+        </uib-pagination>
     </div>
-    <div class="col-md-12" ng-if="authServices.isAdministrator()">
+    <div class="col-md-12">
+        <h3>Project Leader</h3>
+        <form name="projectLeaderForm">
+            <div class="form-group">
+                <select ng-model="projectId" required="required" class="form-control">
+                    <option value="" disabled>-- Select Project --</option>
+                    <option ng-repeat="project in projects" value="{{project.Id}}">{{project.Name}}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <a ng-href="#/projects/{{projectId}}" class="btn btn-default">See Project</a>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-12" ng-if="accountServices.isAdministrator()">
         <!-- Button trigger modal -->
         <button class="btn btn-success" data-toggle="modal" data-target="#addProject">Add New Project</button>
         <a href="#/projects" class="btn btn-default">List All Projects</a>
