ng-init in projects, labels in separate folder, parser and formatter in separate directives

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -93,14 +93,17 @@
 <script src="home/home.js"></script>
 <script src="issues/issues.js"></script>
 <script src="issues/issues-services.js"></script>
+<script src="labels/labels.js"></script>
+<script src="labels/labels-service.js"></script>
 <script src="navbar/navbar.js"></script>
 <script src="projects/projects.js"></script>
 <script src="projects/projects-services.js"></script>
 
 <script src="components/accordion.js"></script>
-<script src="components/common-directives.js"></script>
-<script src="components/date-picker-service.js"></script>
+<script src="components/parser-directive.js"></script>
+<script src="components/date-picker-services.js"></script>
 <script src="components/filter-services.js"></script>
+<script src="components/formatter-directive.js"></script>
 <script src="components/notify-services.js"></script>
 </body>
 </html>
