--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
@@ -5,22 +5,22 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="title" class="control-label col-md-3">Title</label>
-        <div class="col-md-8">
+        <label for="title" class="control-label col-md-2">Title</label>
+        <div class="col-md-9">
             <input type="text" id="title" ng-model="issue.Title" class="form-control" required="required">
         </div>
     </div>
     <div class="form-group">
-        <label for="description" class="control-label col-md-3">Description</label>
-        <div class="col-md-8">
+        <label for="description" class="control-label col-md-2">Description</label>
+        <div class="col-md-9">
             <textarea id="description" ng-model="issue.Description" class="form-control" required="required">
                 {{issue.Description}}
             </textarea>
         </div>
     </div>
     <div class="form-group">
-        <label for="dueDate" class="control-label col-md-3">Due Date</label>
-        <div class="col-md-8">
+        <label for="dueDate" class="control-label col-md-2">Due Date</label>
+        <div class="col-md-9">
             <div class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened"
                        datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"
@@ -32,22 +32,26 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="assigneeId" class="control-label col-md-3">Assignee Id</label>
-        <div class="col-md-8">
-            <input type="text" id="assigneeId" ng-model="issue.Assignee.Id" class="form-control"
-                   required="required">
+        <label for="leader" class="control-label col-md-2">Assignee</label>
+        <div class="col-md-9">
+            <select id="leader" ng-model="issue.Assignee.Id" required="required" class="form-control">
+                <option value="" disabled>-- Select Assignee --</option>
+                <option ng-repeat="assignee in usersIssue | orderBy:'Username'" value="{{assignee.Id}}">{{assignee.Username}}</option>
+            </select>
         </div>
     </div>
     <div class="form-group">
-        <label for="priorityId" class="control-label col-md-3">Priority Id</label>
-        <div class="col-md-8">
-            <input type="text" id="priorityId" ng-model="issue.Priority.Id" class="form-control"
-                   required="required">
+        <label for="priority" class="control-label col-md-2">Priority</label>
+        <div class="col-md-9">
+            <select id="priority" ng-model="issue.Priority.Id" required="required" class="form-control">
+                <option value="" disabled>-- Select Priority --</option>
+                <option ng-repeat="priority in projectIssue.Priorities" value="{{priority.Id}}">{{priority.Name}}</option>
+            </select>
         </div>
     </div>
-    <div class="form-group">
-        <label for="labels" class="control-label col-md-3">Labels</label>
-        <div class="col-md-8">
+    <div class="form-group" ng-controller="LabelsController" ng-init="initGetAllLabels()">
+        <label for="labels" class="control-label col-md-2">Labels</label>
+        <div class="col-md-9">
             <tags-input id="labels" ng-model="issue.Labels" display-property="Name" placeholder="Labels"
                         replace-spaces-with-dashes="false" required="required">
                 <auto-complete source="loadLabels($query)" min-length="0"></auto-complete>
@@ -55,7 +59,7 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-9 col-md-offset-3">
+        <div class="col-md-10 col-md-offset-2">
             <button type="button" class="btn btn-success" ng-disabled="editIssueForm.$invalid" ng-click="editIssue(issue, dt)">
                 Edit Issue
             </button>
