--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/project-by-id.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/project-by-id.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-init="initGetProjectById()">
     <div class="col-md-12">
         <h3>Project
             <span ng-if="isProjectLeader || isAdmin">
@@ -27,12 +27,11 @@
             </span>
         </p>
     </div>
-    <div class="col-md-12">
+    <div class="col-md-12" ng-init="initGetProjectIssues()">
         <h3 class="inline-block">Project Issues</h3>
+         <!-- Modal -->
         <div ng-if="isAdmin || isProjectLeader" class="inline-block">
-            <!-- Button trigger modal -->
             <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#addIssue">Add</button>
-            <!-- Modal -->
             <div class="modal fade" id="addIssue" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -48,7 +47,7 @@
         <!-- Filters -->
         <div class="col-md-2">
             <div class="checkbox">
-                <label><input type="checkbox" ng-model="show.all" ng-click="filterIssues()"/>Show all issues</label>
+                <label><input type="checkbox" ng-model="show.all" ng-click="filterIssuesByAssignee()"/>Show all issues</label>
             </div>
             <div>
                 <h5 class="bold">Filter by due date:</h5>
