--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
@@ -28,11 +28,12 @@
             </select>
         </div>
     </div>
-    <div class="form-group" ng-init="intiGetAllProjects()">
+
+    <div class="form-group" ng-init="initAvailableProjects()">
         <label for="project" class="control-label col-md-2">Project</label>
         <div class="col-md-9">
             <select id="project" ng-model="selectedProject"
-                    ng-options="project.Name for project in projects | orderBy:'Name'"
+                    ng-options="project.Name for project in availableProjects | orderBy:'Name'"
                     required="required" class="form-control">
                 <option value="" disabled>-- Select Project --</option>
             </select>
