projects.js - init by functions

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/edit-project.html
@@ -1,4 +1,4 @@
-<div ng-init="initGetProjectById()">
+<div ng-init="initEditProject()">
     <form name="editProjectForm" class="form-horizontal"  ng-if="isProjectLeader || isAdmin">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-9">
@@ -8,13 +8,13 @@
         <div class="form-group">
             <label for="name" class="control-label col-md-2">Name</label>
             <div class="col-md-9">
-                <input type="text" id="name" ng-model="project.Name" class="form-control" required="required">
+                <input type="text" ng-model="project.Name" id="name"  class="form-control" required="required">
             </div>
         </div>
         <div class="form-group">
             <label for="description" class="control-label col-md-2">Description</label>
             <div class="col-md-9">
-            <textarea id="description" ng-model="project.Description" class="form-control" required="required">
+            <textarea ng-model="project.Description" id="description"  class="form-control" required="required">
                 {{project.Description}}
             </textarea>
             </div>
@@ -22,7 +22,7 @@
         <div class="form-group">
             <label for="priority" class="control-label col-md-2">Priorities</label>
             <div class="col-md-9">
-                <input type="text" id="priority" ng-model="project.Priorities" to-string-formatter to-array-object-parser
+                <input type="text" ng-model="project.Priorities" to-string-formatter to-array-object-parser id="priority"
                        class="form-control" required="required">
             </div>
         </div>
@@ -39,13 +39,12 @@
         <div class="form-group" ng-if="isAdmin">
             <label for="leadId" class="control-label col-md-2">Lead ID</label>
             <div class="col-md-9">
-                <input type="text" id="leadId" ng-model="project.Lead.Id" class="form-control" required="required">
+                <input type="text" ng-model="project.Lead.Id" id="leadId" class="form-control" required="required">
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-10 col-md-offset-2">
-                <button type="button" class="btn btn-success" ng-disabled="editProjectForm.$invalid"
-                        ng-click="editProject(project)">
+                <button ng-disabled="editProjectForm.$invalid" ng-click="editProject(project)" type="button" class="btn btn-success" >
                     Edit Project
                 </button>
                 <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
