--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
@@ -1,4 +1,4 @@
-<form name="issueAddForm" class="form-horizontal">
+<form ng-init="initAddIssue()" name="issueAddForm" class="form-horizontal">
     <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
             <h3>Add New Issue</h3>
@@ -19,7 +19,7 @@
                       placeholder="Description"></textarea>
         </div>
     </div>
-    <div class="form-group" ng-init="initGetAllUsers()">
+    <div class="form-group">
         <label for="assignee" class="control-label col-md-2">Assignee</label>
         <div class="col-md-9">
             <select id="assignee" ng-model="issueData.AssigneeId" required="required" class="form-control">
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class="form-group" ng-init="initAvailableProjects()">
+    <div class="form-group">
         <label for="project" class="control-label col-md-2">Project</label>
         <div class="col-md-9">
             <select id="project" ng-model="selectedProject"
