--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-project.html
@@ -1,4 +1,4 @@
-<form name="addProjectForm" class="form-horizontal" ng-init="initGetAllUsers()">
+<form ng-init="initAddProject()" name="addProjectForm" class="form-horizontal">
     <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
             <h3>Add Project</h3>
@@ -7,13 +7,13 @@
     <div class="form-group">
         <label for="title" class="control-label col-md-2">Name</label>
         <div class="col-md-9">
-            <input type="text" id="title" class="form-control" ng-model="projectData.Name" placeholder="Name" required="required">
+            <input type="text"  ng-model="projectData.Name" id="title" class="form-control" placeholder="Name" required="required">
         </div>
     </div>
     <div class="form-group">
         <label for="projectKey" class="control-label col-md-2">Project Key</label>
         <div class="col-md-9">
-            <input type="text" id="projectKey" class="form-control" ng-model="projectData.ProjectKey" required="required" placeholder="Project Key">
+            <input type="text" ng-model="projectData.ProjectKey" id="projectKey" class="form-control"  required="required" placeholder="Project Key">
         </div>
     </div>
     <div class="form-group">
@@ -22,11 +22,10 @@
             <textarea id="description" ng-model="projectData.Description" class="col-md-8 form-control" required="required" placeholder="Description"></textarea>
         </div>
     </div>
-    <div class="form-group" ng-init="initGetAllUsers()">
+    <div class="form-group">
         <label for="leader" class="control-label col-md-2">Leader</label>
         <div class="col-md-9">
-            <select id="leader" ng-model="projectData.LeadId"
-                    required="required" class="form-control">
+            <select ng-model="projectData.LeadId" id="leader"  required="required" class="form-control">
                 <option value="" disabled>-- Select Assignee --</option>
                 <option ng-repeat="user in users | orderBy:'Username'" value="{{user.Id}}">{{user.Username}}</option>
             </select>
@@ -35,8 +34,8 @@
     <div class="form-group" ng-controller="LabelsController" ng-init="initGetAllLabels()">
         <label for="labels" class="control-label col-md-2">Labels</label>
         <div class="col-md-9">
-            <tags-input id="labels" ng-model="projectData.Labels" display-property="Name" placeholder="Labels"
-                        replace-spaces-with-dashes="false" required="required">
+            <tags-input  ng-model="projectData.Labels" id="labels" display-property="Name" placeholder="Labels"
+                         replace-spaces-with-dashes="false" required="required">
                 <auto-complete source="loadLabels($query)" min-length="0"></auto-complete>
             </tags-input>
         </div>
@@ -44,16 +43,16 @@
     <div class="form-group">
         <label for="priorities" class="control-label col-md-2">Priorities</label>
         <div class="col-md-9">
-            <input type="text" id="priorities" class="form-control" ng-model="projectData.Priorities" to-array-object-parser
+            <input type="text" ng-model="projectData.Priorities" to-array-object-parser id="priorities" class="form-control"
                    required="required" placeholder="Priorities">
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="button" class="btn btn-success" ng-click="addProject(projectData, projectLabels)" ng-disabled="addProjectForm.$invalid" data-dismiss="modal">
+            <button ng-click="addProject(projectData, projectLabels)" ng-disabled="addProjectForm.$invalid" data-dismiss="modal" type="button" class="btn btn-success">
                 Add Project
             </button>
-            <a href="#/" class="btn btn-default" data-dismiss="modal">Cancel</a>
+            <a href="#/" data-dismiss="modal" class="btn btn-default">Cancel</a>
         </div>
     </div>
 </form>
