--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/list-all-projects.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/list-all-projects.html
@@ -1,4 +1,4 @@
-<div class="row" ng-init="intiGetAllProjects()" ng-if="isAdmin">
+<div ng-init="initListAllProjects()" class="row" >
     <div class="col-md-12">
         <h3>Current Projects</h3>
     </div>
