add directive intToStringFormatter, issues.js - add init functions

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/issue-by-id.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/issue-by-id.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div ng-init="initIssueById()" class="row">
     <div class="col-md-12">
         <h3>Issue
             <span ng-if="isProjectLeader || isAdmin">
