--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
@@ -1,4 +1,4 @@
-<form name="editIssueForm" class="form-horizontal">
+<form ng-init="initEditIssue()" name="editIssueForm" class="form-horizontal">
     <div class="form-group">
         <div class="col-md-offset-2 col-md-9">
             <h2>Edit Issue</h2>
@@ -7,7 +7,7 @@
     <div class="form-group">
         <label for="title" class="control-label col-md-2">Title</label>
         <div class="col-md-9">
-            <input type="text" id="title" ng-model="issue.Title" class="form-control" required="required">
+            <input type="text" ng-model="issue.Title" id="title" class="form-control" required="required">
         </div>
     </div>
     <div class="form-group">
@@ -34,7 +34,7 @@
     <div class="form-group">
         <label for="leader" class="control-label col-md-2">Assignee</label>
         <div class="col-md-9">
-            <select id="leader" ng-model="issue.Assignee.Id" required="required" class="form-control">
+            <select ng-model="issue.Assignee.Id" id="leader" required="required" class="form-control">
                 <option value="" disabled>-- Select Assignee --</option>
                 <option ng-repeat="assignee in users | orderBy:'Username'" value="{{assignee.Id}}">{{assignee.Username}}</option>
             </select>
@@ -43,9 +43,9 @@
     <div class="form-group">
         <label for="priority" class="control-label col-md-2">Priority</label>
         <div class="col-md-9">
-            <select id="priority" ng-model="issue.Priority.Id" required="required" class="form-control">
+            <select ng-model="issue.Priority.Id" int-to-string-formatter id="priority" required="required" class="form-control">
                 <option value="" disabled>-- Select Priority --</option>
-                <option ng-repeat="priority in project.Priorities" value="{{priority.Id}}">{{priority.Name}}</option>
+                <option ng-repeat="priority in project.Priorities" value={{priority.Id}}>{{priority.Name}}</option>
             </select>
         </div>
     </div>
@@ -60,7 +60,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-10 col-md-offset-2">
-            <button type="button" class="btn btn-success" ng-disabled="editIssueForm.$invalid" ng-click="editIssue(issue, dt)">
+            <button ng-disabled="editIssueForm.$invalid" ng-click="editIssue(issue, dt)" type="button" class="btn btn-success">
                 Edit Issue
             </button>
             <a ng-href="#/issues/{{issueId}}" class="btn btn-default">Cancel</a>
