--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
@@ -59,7 +59,8 @@
         <div class="col-md-9">
             <select id="priority" ng-model="issueData.PriorityId" required="required" class="form-control">
                 <option value="" disabled>-- Projects --</option>
-                <option ng-repeat="priority in selectedProject.Priorities" value="{{priority.Id}}">{{priority.Name}}
+                <option ng-repeat="priority in selectedProject.Priorities" value="{{priority.Id}}">
+                    {{priority.Name}}
                 </option>
             </select>
         </div>
