--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/edit-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/edit-project.html
@@ -22,8 +22,8 @@
         <div class="form-group">
             <label for="priority" class="control-label col-md-2">Priorities</label>
             <div class="col-md-9">
-                <input type="text" ng-model="project.Priorities" to-string-formatter to-array-object-parser id="priority"
-                       class="form-control" required="required">
+                <input type="text" ng-model="project.Priorities" array-object-to-string-formatter to-array-object-parser
+                       id="priority" class="form-control" required="required">
             </div>
         </div>
         <div class="form-group" ng-controller="LabelsController" ng-init="initGetAllLabels()">
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="form-group" ng-if="isAdmin">
-            <label for="leadId" class="control-label col-md-2">Lead ID</label>
+            <label for="leadId" class="control-label col-md-2">Lead Id</label>
             <div class="col-md-9">
                 <input type="text" ng-model="project.Lead.Id" id="leadId" class="form-control" required="required">
             </div>
