add delay on pages

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/account/register-login.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/account/register-login.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div ng-controller="DelayController" ng-hide="delay" class="row delay">
     <div class="col-md-9 col-md-offset-2 col-lg-8" ng-controller="AccordionController">
         <uib-accordion>
             <uib-accordion-group uib-accordion-header is-open="status.isFirstOpen">
