--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row delay" ng-controller="DelayController" ng-hide="delay">
     <div class="col-md-12">
         <h2>Dashboard</h2>
     </div>
