--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/index.html
@@ -90,6 +90,7 @@
 <script src="account/confirm-password-directive.js"></script>
 <script src="account/logout-directive.js"></script>
 <script src="dashboard/dashboard.js"></script>
+<script src="delay/delay.js"></script>
 <script src="home/home.js"></script>
 <script src="issues/issues.js"></script>
 <script src="issues/issues-services.js"></script>
