--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/account/change-password.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/account/change-password.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div ng-controller="DelayController" ng-hide="delay" class="row delay">
     <div class="col-md-offset-2 col-md-9">
         <form name="changePasswordForm">
             <div class="form-group">
