--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/issues/edit-issue.html
@@ -1,4 +1,4 @@
-<form ng-init="initEditIssue()" name="editIssueForm" class="form-horizontal">
+<form ng-init="initEditIssue()" ng-controller="DelayController" ng-hide="delay" name="editIssueForm" class="form-horizontal delay">
     <div class="form-group">
         <div class="col-md-offset-2 col-md-9">
             <h2>Edit Issue</h2>
