--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-issue.html
@@ -1,4 +1,4 @@
-<form ng-init="initAddIssue()" name="issueAddForm" class="form-horizontal">
+<form ng-init="initAddIssue()" ng-controller="DelayController" ng-hide="delay" name="issueAddForm" class="form-horizontal delay">
     <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
             <h3>Add New Issue</h3>
