--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-project.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/add-project.html
@@ -1,4 +1,4 @@
-<form ng-init="initAddProject()" name="addProjectForm" class="form-horizontal">
+<form ng-init="initAddProject()"  name="addProjectForm" ng-controller="DelayController" ng-hide="delay" class="form-horizontal delay">
     <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
             <h3>Add Project</h3>
@@ -26,7 +26,7 @@
         <label for="leader" class="control-label col-md-2">Leader</label>
         <div class="col-md-9">
             <select ng-model="projectData.LeadId" id="leader" required="required" class="form-control">
-                <option value="" disabled>-- Select Assignee --</option>
+                <option value="" disabled>-- Select Project Leader --</option>
                 <option ng-repeat="user in users | orderBy:'Username'" value="{{user.Id}}">{{user.Username}}</option>
             </select>
         </div>
