--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/list-all-projects.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/projects/list-all-projects.html
@@ -1,6 +1,9 @@
-<div ng-init="initListAllProjects()" class="row" >
+<div ng-init="initListAllProjects()" ng-controller="DelayController" ng-hide="delay" class="row delay">
     <div class="col-md-12">
         <h3>Current Projects</h3>
+    </div>
+    <div class="form-group col-md-3 pull-right">
+        <input type="text" ng-model="search" class="form-control" placeholder="Search by project name">
     </div>
     <div class="col-md-12">
         <table class="table table-hover">
@@ -12,7 +15,7 @@
                 <th>Add New Issue</th>
             </tr>
             </thead>
-            <tbody ng-repeat="project in projects | orderBy:'Name'">
+            <tbody ng-repeat="project in projects | orderBy:'Name' | filter:search">
             <tr>
                 <td><a ng-href="#/projects/{{project.Id}}">{{project.Name}}</a></td>
                 <td>{{project.Lead.Username}}</td>
